# cnn_demosaic

./: .gitignore  README.md  pyproject.toml
assets/: .gitattributes  DSCF5657.exr  DSCF5657.raf
notebooks/: color.ipynb  color_levels_model.ipynb  color_model.ipynb  color_model_test.ipynb  exposure_model.ipynb  exposure_model_test.ipynb
src/cnn_demosaic/: color.py  color_model.py  config.py  demosaic.py  exposure.py  exposure_model.py  model.py  output.py  process_raw.py  profile.py  transform.py  types.py
src/cnn_demosaic/util/: path_parser.py
src/cnn_demosaic/weights/: color.weights.h5  color_transform.weights.h5  exposure.weights.h5  white_balance.weights.h5  x-trans.weights.h5
src/demosaic_app/: app.py  operations.py
tests/: test_path_parser.py
training/: .gitattributes  DSCF5652.RAF  DSCF5652_card.exr  DSCF5652_card_srgb.exr  DSCF5711_card.exr  DSCF5711_card_srgb.exr  DSCF5731.RAF  DSCF5731.exr  DSCF5731_card.exr  DSCF5731_card_srgb.exr
